Refactor logging configuration and update environment variables in prod.env; add validation for API_KEY and BUDGET_ID in main function

--- a/prod.env
+++ b/prod.env
@@ -1,2 +1,2 @@
-API_KEY="op://service_$ENV/YNAB API/credential"
-BUDGET_ID="op://service_$ENV/YNAB API/username"
+BUDGET_ID="op://service_prod/YNAB API/Budget ID"
+API_KEY="op://service_prod/YNAB API/Key"
